# libFreeDomeSound

./: CMakeLists.txt  README.md  build_all_platforms.sh
build_scripts/: build_linux.sh
cmake/: freedomesound.pc.in
debian/: changelog  control  rules
docs/formats/: DAGA_FORMAT.md
examples/: format_gpu_demo.cpp  simple_vinyl_demo.cpp  vinyl_video_demo.cpp
src/: adaptive_audio_processor.cpp  adaptive_audio_processor.hpp  anantasound_core.hpp  breathing_analyzer.cpp  format_handler.cpp  format_handler.hpp  freedomesound_core.hpp  gpu_processor.cpp  gpu_processor.hpp  video_player.cpp  video_player.hpp
